[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://ui/musicOn.png" type="Texture" id=3]
[ext_resource path="res://ui/musicOff.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/OverLay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0666667, 0.113725, 0.368627, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_hide_finished"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/OverLay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.501 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0666667, 0.113725, 0.368627, 0 ), Color( 0.0666667, 0.113725, 0.368627, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_show_finished"
} ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="ColorRect" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 480.0
color = Color( 0.0666667, 0.113725, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/MainMenu"]
anchor_left = 0.5
anchor_top = 0.221
anchor_right = 0.5
anchor_bottom = 0.221
margin_left = -125.0
margin_top = -19.603
margin_right = 125.0
margin_bottom = 24.397
rect_pivot_offset = Vector2( 125, 20 )
text = "Color &  Jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="MarginContainer/MainMenu"]
self_modulate = Color( 0.952941, 0.443137, 0.129412, 1 )
anchor_left = 0.5
anchor_top = 0.334
anchor_right = 0.5
anchor_bottom = 0.334
margin_left = -55.401
margin_top = -19.6632
margin_right = 46.599
margin_bottom = 24.3368
rect_scale = Vector2( 0.7, 0.7 )
text = "Best: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="MarginContainer/MainMenu/BestScore"]
self_modulate = Color( 0.952941, 0.443137, 0.129412, 1 )
anchor_left = 1.0
anchor_top = 0.433
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 5.60004
margin_top = -16.52
margin_right = 69.6
margin_bottom = 20.8
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="MarginContainer/MainMenu"]
anchor_left = 0.5
anchor_top = 0.433
anchor_right = 0.5
anchor_bottom = 0.433
margin_left = -60.8
margin_top = 27.36
margin_right = 59.2
margin_bottom = 71.36
rect_pivot_offset = Vector2( 60, 0 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="MarginContainer/MainMenu/Score"]
anchor_left = 0.5
anchor_top = 0.433
anchor_right = 0.5
anchor_bottom = 0.433
margin_left = -75.0
margin_top = 25.9671
margin_right = 75.0
margin_bottom = 65.9671
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="TextureButton" parent="MarginContainer/MainMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -36.4601
margin_top = 5.2857
margin_right = 63.5399
margin_bottom = 105.286
rect_scale = Vector2( 0.3, 0.3 )
toggle_mode = true
button_mask = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="MarginContainer/MainMenu"]
anchor_left = 0.5
anchor_top = 0.833
anchor_right = 0.5
anchor_bottom = 0.833
margin_left = -160.0
margin_top = 0.159973
margin_right = 160.0
margin_bottom = 44.16
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 160, 0 )
custom_colors/font_color = Color( 1, 1, 1, 0.392157 )
text = "Tap to Jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverLay" type="ColorRect" parent="MarginContainer"]
margin_right = 320.0
margin_bottom = 480.0
color = Color( 0.0666667, 0.113725, 0.368627, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
[connection signal="toggled" from="MarginContainer/MainMenu/Music" to="." method="_on_Music_toggled"]
